# acc-cosc-1337-spring-2022-lucian-swaim-acc

.github/: unit_tests.sh
src/classwork/: CMakeLists.txt
src/classwork/05_assign/: main.cpp  sequence.cpp  sequence.h
src/examples/: CMakeLists.txt
src/examples/05_module/: CMakeLists.txt  come_out_phase.cpp  come_out_phase.h  die.cpp  die.h  main.cpp  phase.cpp  phase.h  point_phase.cpp  point_phase.h  roll.cpp  roll.h  shooter.cpp  shooter.h
src/homework/: CMakeLists.txt
src/homework/01_variables/: main.cpp  variables.cpp  variables.h
src/homework/02_expressions/: expressions.cpp  expressions.h  main.cpp
src/homework/03_decisions/: decisions.cpp  decisions.h  main.cpp
src/homework/04_iteration/: dna.cpp  dna.h  main.cpp
src/homework/tic_tac_toe/: main.cpp  tic_tac_toe.cpp  tic_tac_toe.h  tic_tac_toe_3.cpp  tic_tac_toe_3.h  tic_tac_toe_4.cpp  tic_tac_toe_4.h  tic_tac_toe_data.cpp  tic_tac_toe_data.h  tic_tac_toe_manager.cpp  tic_tac_toe_manager.h
test/classwork_test/: CMakeLists.txt
test/classwork_test/05_assign_test/: sequence_tests.cpp
test/examples_test/: CMakeLists.txt
test/examples_test/05_module_test/: 05_module_tests.cpp
test/homework_test/: CMakeLists.txt
test/homework_test/01_variables_test/: 01_variables_tests.cpp
test/homework_test/02_expressions_test/: 02_expressions_tests.cpp
test/homework_test/03_decisions_test/: 03_decisions_tests.cpp
test/homework_test/04_iteration_test/: 04_iteration_tests.cpp
test/homework_test/tic_tac_toe_test/: tic_tac_toe_test.cpp
